app/assets/stylesheets/qa.css
.center {
  text-align: center;
}

.container {
  height: 100%;
  width: 820px;
	margin: 20px auto;
}

#content {
  min-height: 100%;
  margin-bottom: -75px;
}

.page-header {
  padding-top: 20px;
  text-align: center;
}

.page-header img{
  padding-top: 10px;
  padding-bottom: 10px;
  text-align: center;
}

.page-header img.logo_small {
  width: 315px;
}

#instruction_box img {
  padding-left: 15px;
  padding-bottom: 30px;
  margin-top: -30px;
  background-color: white;
}

div#questions {
	padding: 10px 20px 20px 30px;
}

div.options{
	width: 400px;
	margin: 0 auto;
}

#win, #lose, .question, .correct_answer, .question_id{
  display: none;
}

#win, #lose {
	width: 745px;
	min-height: 110px;
	margin-left: 40px;
}

#win{
	text-align:center;
	font-size: 25px;
}

.result{
	font-size: 40px;
	font-family: "Marydale";
	margin-right:10px;
}

#lose #incorrect_questions {
 font-size:20px;
}

#win #alert-actions, #lose #alert-actions {margin-left: 180px;}
#alert-actions {margin: 30px 0px 50px 0px; text-align:center;}
#alert-actions .center {width:413px; margin: 0 auto; display:block;}
#alert-actions .btn.small {float: left;}
#alert-actions .btn.small:nth-child(2) {margin-left: 10px;}

.btn {
  width: 320px;
  display: table-cell;
  vertical-align: middle;
  text-align: center;
  text-decoration: none;
  font-weight: bold;
}

.button_at_middle {
  width: 315px;
  margin-left: auto;
  margin-right: auto;
}

.btn.large {
  font-family: "franklin_gothic_demi";
  color: white;
  margin: 0px auto;
  font-size: 25px;
  height: 70px;
  width: 315px;
  background: url("large_button.png") no-repeat;
  border: none;
}

.btn.answer {
  padding: 0px 10px;
  height: 93px;
  width: 400px;
  color: black;
  font-size: 20px;
}

.btn.answer span {
	margin: 0px 15px;
	line-height: 24px;
}

.btn.answer1 {
  background: url("/assets/answer1_button.png") no-repeat;
}

.btn.answer0 {
  background: url("/assets/answer2_button.png") no-repeat;
}

.btn.small {
  font-family: "franklin_gothic_demi";
  font-size: 20px;
  width: 200px;
  height:43px;
  color: white;
  padding-top:10px;
}

.btn.small.quit { background: url("/assets/quit_button.png") no-repeat; }
.btn.small.play { background: url("/assets/play_again_button.png") no-repeat; }

.btn:hover {
  color: #3B0734;
}

.choices {
  margin: 0;
  padding: 0;
}

.choices li {
  list-style-type: none;
  padding-top: 20px;
}

a#welcome {
	color: #060606;
	text-decoration: underline;
	font-size: 19px;
  line-height: 40px;
}

/* Styling for counter */
#clock {
  font-size: 24px;
  text-align: right;
  padding-right: 32px;
}
.cntSeparator {
  font-size: 54px;
  margin: 10px 7px;
  color: #fff;
  line-height: 50px;
}

a.download_link{
  color: #ffff00;
}

div.register_form{
  font-size: 18px;
  list-style: none;
  padding-left: 30px;
  width: 775px;
}

div.register_form label {
  font-weight: bold;
}

div.register_form fieldset.actions {
  width: 315px;
  margin-left: auto;
  margin-right: auto;
  padding-left: 0px;
}

div.register_form fieldset.actions input.btn.large {
  padding-top: 0px;
  font-weight: bold;
}

div#login{
  padding-bottom: 5px;
}

div#login #player_email_input {
  margin-top: 0px;
  margin-left: 50px;
  margin-right: 120px;
}

.question_text {
  font-size: 24px;
  line-height: 30px;
}

